charts/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr:6.2.1
          ports:
            - containerPort: 7878
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 750Mi
              cpu: 300m
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          hostPath:
            path: /mnt/ext_ssh_bk/configs/radarr
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /mnt/big_storage/Torrent
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
